--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Navigation bar code here
 <ul class="nav navbar-nav">
   <li><a href="#robbinsLane">MY SCHOOL</a></li>
   <li><a href="#campusLife">CAMPUS LIFE</a></li>
-  <li><a href="#achievements">WORK</a></li>
+  <li><a href="#achievements">ACHIEVMENTS</a></li>
   <li><a href="#writings">WRITINGS</a></li>
   <li><a href="#aboutMe">BLOG</a></li>
   <li><a href="#contact">CONTACT</a></li>
